# smobariki

./: README.md
SEC_Company_Ownership_Filings/: .env.example  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
SEC_Company_Ownership_Filings/alembic/: env.py
SEC_Company_Ownership_Filings/alembic/versions/: 0001_initial.py
SEC_Company_Ownership_Filings/src/edgar_ownership_etl/: cli.py  config.py  logging_config.py
SEC_Company_Ownership_Filings/src/edgar_ownership_etl/db/: migrations_notes.md  models.py  session.py
SEC_Company_Ownership_Filings/src/edgar_ownership_etl/extract/: filing_document_extractor.py  submissions_extractor.py
SEC_Company_Ownership_Filings/src/edgar_ownership_etl/load/: loader.py  upserts.py
SEC_Company_Ownership_Filings/src/edgar_ownership_etl/orchestration/: pipeline.py  watermarks.py
SEC_Company_Ownership_Filings/src/edgar_ownership_etl/sec/: cik.py  client.py  filings.py  rate_limiter.py  (+1 more)
SEC_Company_Ownership_Filings/tests/: test_cik_normalization.py  test_document_selection.py  test_filings_parsing.py  test_incremental_watermarks.py  test_loader_duplicate_hashes.py  test_loader_end_to_end.py  test_migration_model_alignment.py  test_models_required_tables.py  test_models_unique_tables.py  test_ownership_xml_parser.py  test_pipeline_recovery.py  test_reporting_owner_loader_fields.py  test_schedule_13_parser.py  test_sec_client.py  test_sync_cik_map_dedup.py  test_upserts.py  test_url_building.py  test_views_defined.py
SEC_Company_Ownership_Filings/tests/fixtures/: sample_form4.xml  sample_schedule13d.html
(+32 files in other folders)
