[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edgar-ownership-etl"
version = "0.1.0"
description = "Local SEC ownership ETL pipeline"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13",
  "apscheduler>=3.10",
  "httpx>=0.27",
  "lxml>=5.2",
  "psycopg[binary]>=3.1",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",
  "sqlalchemy>=2.0",
  "tenacity>=8.3",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "ruff>=0.4"]

[project.scripts]
edgar-etl = "edgar_ownership_etl.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

